[gd_scene load_steps=8 format=2]

[ext_resource path="res://modules/Shop/shop_list.gd" type="Script" id=1]
[ext_resource path="res://modules/Shop/Shop.gd" type="Script" id=2]
[ext_resource path="res://share/images/1280px-Green_arrow_right.png" type="Texture" id=3]
[ext_resource path="res://share/audio/Select-cm.wav" type="AudioStream" id=4]
[ext_resource path="res://share/audio/Back-cm.wav" type="AudioStream" id=5]
[ext_resource path="res://share/audio/Play.cm_01.wav" type="AudioStream" id=6]
[ext_resource path="res://share/audio/Purchase-cm.wav" type="AudioStream" id=7]

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Arrow" type="Sprite" parent="."]
position = Vector2( 624, 304 )
scale = Vector2( 0.620005, 0.379999 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Arrow"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -546.77
margin_top = -34.2108
margin_right = -348.77
margin_bottom = -20.2108
rect_scale = Vector2( 5, 5 )
text = "Buy The Laser Gun to Move On"

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1020.0
margin_top = 129.0
margin_right = -167.0
margin_bottom = -135.0

[node name="CashLabel" type="Label" parent="Panel"]
anchor_left = 0.022
anchor_top = 0.021
anchor_right = 0.39
anchor_bottom = 0.08
margin_left = 3.874
margin_top = 21.864
margin_right = -193.87
margin_bottom = -12.28
rect_scale = Vector2( 3.75, 3.75 )
text = "Cash:"

[node name="CostLabel" type="Label" parent="Panel"]
anchor_left = 0.387
anchor_top = 0.911
anchor_right = 0.572
anchor_bottom = 0.969
margin_left = 0.328979
margin_top = -0.376038
margin_right = -99.276
margin_bottom = -33.704
rect_scale = Vector2( 3.75, 3.75 )
text = "Cost:"

[node name="ItemList" type="ItemList" parent="Panel"]
anchor_top = 0.131
anchor_right = 1.0
anchor_bottom = 0.869
margin_top = 0.104004
margin_right = -590.0
margin_bottom = -505.104
rect_scale = Vector2( 5.11645, 6.20275 )
same_column_width = true
script = ExtResource( 1 )

[node name="Buy" type="Button" parent="Panel"]
margin_left = 577.0
margin_top = 732.0
margin_right = 613.0
margin_bottom = 752.0
rect_scale = Vector2( 3.39011, 3.48603 )
text = "Buy"

[node name="Close" type="Button" parent="Panel"]
anchor_left = 0.879
anchor_top = 0.038
anchor_right = 0.944
anchor_bottom = 0.096
margin_left = -0.307068
margin_top = -0.00800133
margin_right = -28.952
margin_bottom = -27.336
rect_scale = Vector2( 2.64, 2.36 )
text = "x"

[node name="NextLevel" type="Button" parent="Panel"]
margin_left = 37.0
margin_top = 732.0
margin_right = 117.0
margin_bottom = 752.0
rect_scale = Vector2( 2.8, 3.44 )
disabled = true
text = "Next Level"

[node name="Cash" type="Label" parent="Panel"]
margin_left = 165.0
margin_top = 40.0
margin_right = 193.0
margin_bottom = 54.0
rect_scale = Vector2( 3.75, 3.75 )
text = "5"

[node name="Cost" type="Label" parent="Panel"]
anchor_left = 0.573
anchor_top = 0.901
anchor_right = 0.715
anchor_bottom = 0.969
margin_left = -0.00900269
margin_top = 7.784
margin_right = -76.095
margin_bottom = -33.704
rect_scale = Vector2( 3.75, 3.75 )
text = "0"

[node name="SelectAudio" type="AudioStreamPlayer" parent="Panel"]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="CloseAudio" type="AudioStreamPlayer" parent="Panel"]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="OpenAudio" type="AudioStreamPlayer" parent="Panel"]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="BuyAudio" type="AudioStreamPlayer" parent="Panel"]
stream = ExtResource( 7 )

[connection signal="item_selected" from="Panel/ItemList" to="Panel/ItemList" method="_on_ItemList_item_selected"]
[connection signal="pressed" from="Panel/Buy" to="." method="_on_Buy_pressed"]
[connection signal="pressed" from="Panel/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Panel/NextLevel" to="." method="_on_NextLevel_pressed"]
